# libzip

./: cmake-config.h.in  cmake-zipconf.h.in  meson.build  meson_options.txt
lib/: meson.build  zip_err_str.c
